--- a/templates/LandingPage/about.html.twig
+++ b/templates/LandingPage/about.html.twig
@@ -14,7 +14,7 @@
 			<!-- Start home-about Area -->
 			<section class="home-about-area section-gap aboutus-about" id="about">
 				<div class="container">
-					<div class="row justify-content-center align-items-center">
+					<div class="row justify-content-cenqter align-items-center">
 						<div class="col-lg-8 col-md-12 home-about-left">
 							<h6>Brand new app to blow your mind</h6>
 							<h1>
