--- a/templates/bundles/EasyAdminBundle/page/dashboard.html.twig
+++ b/templates/bundles/EasyAdminBundle/page/dashboard.html.twig
@@ -1,18 +1,36 @@
 {% extends '@!EasyAdmin/page/content.html.twig' %}
-{% block page_content %}
-    <div class="form-group">
-        <form method="post" action="{{ path('change_password') }}">
-            <input type="hidden" name="_method" value="POST">
-            <div class="input-group mb-4">
-                <input type="password" class="form-control">
+{% block main %}
+
+    <div class="col-md-12 col-xl-6">
+        <div class="card Recent-Users">
+            <div class="card-header">
+                <h5>Recent Users</h5>
             </div>
-            <div class="input-group mb-4">
-                <input type="password" class="form-control">
+            <div class="card-block px-0 py-3">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <tbody>
+                        {% for  emp in recentEmployeeInYear %}
+                            <tr class="unread">
+                                <td><img class="rounded-circle" style="width:40px;"
+                                         src="{{ vich_uploader_asset(emp, 'thumbnailFile') }}"
+                                         alt="{{ emp.thumbnail }}"></td>
+                                <td>
+                                    <h6 class="mb-1">{{ emp.firstName }} {{ emp.lastName }}</h6>
+                                    <p class="m-0">{{ emp.user.email }}</p>
+                                </td>
+                                <td>
+                                    <h6 class="text-muted">
+                                        <i class="fas fa-circle text-c-green f-10 m-r-15"></i>
+                                        {{ emp.createAt|date("F jS") }}
+                                    </h6>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div class="input-group mb-4">
-                <input type="password" class="form-control">
-            </div>
-            <button class="btn float-right">Save</button>
-        </form>
+        </div>
     </div>
 {% endblock %}
