--- a/templates/bundles/EasyAdminBundle/page/dashboard.html.twig
+++ b/templates/bundles/EasyAdminBundle/page/dashboard.html.twig
@@ -1,36 +1,81 @@
 {% extends '@!EasyAdmin/page/content.html.twig' %}
-{% block main %}
-
-    <div class="col-md-12 col-xl-6">
-        <div class="card Recent-Users">
-            <div class="card-header">
-                <h5>Recent Users</h5>
-            </div>
-            <div class="card-block px-0 py-3">
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <tbody>
-                        {% for  emp in recentEmployeeInYear %}
-                            <tr class="unread">
-                                <td><img class="rounded-circle" style="width:40px;"
-                                         src="{{ vich_uploader_asset(emp, 'thumbnailFile') }}"
-                                         alt="{{ emp.thumbnail }}"></td>
-                                <td>
-                                    <h6 class="mb-1">{{ emp.firstName }} {{ emp.lastName }}</h6>
-                                    <p class="m-0">{{ emp.user.email }}</p>
-                                </td>
-                                <td>
-                                    <h6 class="text-muted">
-                                        <i class="fas fa-circle text-c-green f-10 m-r-15"></i>
-                                        {{ emp.createAt|date("F jS") }}
-                                    </h6>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
+{% block page_content %}
+    <div class="row">
+        <div class="col-md-12 col-xl-6">
+            <div class="card Recent-Users">
+                <div class="card-header">
+                    <h5>Recent Users</h5>
+                </div>
+                <div class="card-block px-0 py-3">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <tbody>
+                            {% for  emp in recentEmployeeInYear %}
+                                <tr class="unread">
+                                    <td><img class="rounded-circle" style="width:40px;"
+                                             src="{{ vich_uploader_asset(emp, 'thumbnailFile') }}"
+                                             alt="{{ emp.thumbnail }}"></td>
+                                    <td>
+                                        <h6 class="mb-1">{{ emp.firstName }} {{ emp.lastName }}</h6>
+                                        <p class="m-0">{{ emp.user.email }}</p>
+                                    </td>
+                                    <td>
+                                        <h6 class="text-muted">
+                                            <i class="fas fa-circle text-c-green f-10 m-r-15"></i>
+                                            {{ emp.createAt|date("F jS") }}
+                                        </h6>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="col-md-12 col-xl-6">
+            <canvas id="myChart" width="400" height="400"></canvas>
+        </div>
     </div>
+{% endblock %}
+{% block body_javascript %}
+    <script src="{{ asset('bundles/chart/Chart.min.js') }}"></script>
+    <script>
+        console.log({{ citizenData|json_encode() }})
+        var ctx = document.getElementById('myChart');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: ['Under 20', '20 - 39', '40 - 59', '60 - 79', 'Above 79'],
+                datasets: [{
+                    label: '# of Age',
+                    data: {{ citizenData|json_encode() }},
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    </script>
 {% endblock %}
