--- a/templates/bundles/EasyAdminBundle/page/dashboard.html.twig
+++ b/templates/bundles/EasyAdminBundle/page/dashboard.html.twig
@@ -39,7 +39,40 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12 col-xl-6"></div>
+        <div class="col-md-12 col-xl-6">
+            <div class="card Recent-Users">
+                <div class="card-header">
+                    <h5>Statistic</h5>
+                </div>
+                <div class="card-block">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <tbody>
+                            {% for  citizen in getRecentBirthDay %}
+                                <tr class="unread">
+                                    <td><img class="rounded-circle" style="width:40px;"
+                                             src="{% if (vich_uploader_asset(citizen, 'thumbnailFile')) %}{{ vich_uploader_asset(citizen, 'thumbnailFile') }}{% else %}{{ asset('img/user/avatar-2.jpg') }}{% endif %}"
+                                             alt="{{ citizen.thumbnail }}">
+                                    </td>
+                                    <td>
+                                        <h6 class="mb-1">{{ citizen.firstName }} {{ citizen.lastName }}</h6>
+                                        {% for a in citizen.apartment %}
+                                            <p class="m-0">{{ a }}</p>
+                                        {% endfor %}
+                                    </td>
+                                    <td>
+                                        <h6 class="text-muted">
+                                            {{ citizen.dateOfBirth|date("F jS") }}
+                                        </h6>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="col-md-12 col-xl-6">
             <canvas id="quoteChart" width="400"></canvas>
         </div>
